# planerFront

./: package-lock.json  package.json
MyPlaner/: .env-example  .gitignore  alembic.ini  pyproject.toml
MyPlaner/alembic/: env.py
MyPlaner/app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
MyPlaner/app/routers/: auth.py  tags.py  tasks.py  user.py
MyPlaner/myplaner-app/: pyproject.toml
public/: index.html  main_page.html
src/: App.js  api.auth.js  api.config.js  main_page.jsx  main_page_render.jsx
src/main_page/: main_page.css  main_page.jsx
src/main_page/header/: calendar.css  calendar.jsx  diagramm.css  diagramm.jsx  header.css  header.jsx  search.css  search.jsx  search_variant.css  search_variant.jsx  switch.css  switch.jsx
src/main_page/main/: main.css  main.jsx
src/main_page/main/add_plan/: add_plan.css  add_plan.jsx  mini_tag.css  mini_tag.jsx  select_tag.css  select_tag.jsx
src/main_page/main/choosed_date/: choosed_date.css  choosed_date.jsx
src/main_page/main/complete/: comlete.jsx  complete.css  complete.jsx  plan.css  plan.jsx  plan_tag.css  today.css
src/main_page/main/found/: choosed_date.jsx
src/main_page/main/outtimed/: outtimed.css  outtimed.jsx  plan.css  plan.jsx  plan_tag.jsx
src/main_page/main/timeline/: timeline.css  (+3 more)
src/main_page/sidebar/: add_tag.css  add_tag.jsx  folder.css  folder.jsx  sidebar.css  sidebar.jsx  sidebar_button.css  sidebar_button.jsx  tag.css  tag.jsx  user_tag.css  user_tag.jsx
src/registerAndSignin/: button.css  button.jsx  input.css  input.jsx  inputField.css  inputField.jsx
(+6 files in other folders)
